src/objects/Student__c.object
<CustomObject>
    <description>学生对象</description>
    <fields>
        <fullName>Education__c</fullName>
        <label>学历</label>
        <picklist>
            <picklistValues>
                <fullName>文盲</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>小学</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>初中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>专科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>本科</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>硕士</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博士</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScoreID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>成绩</label>
        <referenceTo>Score__c</referenceTo>
        <relationshipLabel>学生</relationshipLabel>
        <relationshipName>ScoreID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <description>性别</description>
        <label>性别</label>
        <picklist>
            <picklistValues>
                <fullName>男</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>女</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>birthday__c</fullName>
        <label>生日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>remainder__c</fullName>
        <formula>birthday__c  - 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>生日提醒时间</label>
        <type>Date</type>
    </fields>
    <label>学生</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Education__c</columns>
        <columns>Sex__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>birthday__c</columns>
        <columns>ScoreID__c</columns>
        <columns>remainder__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>学生名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ScoreOK</fullName>
        <active>true</active>
        <description>分数必须及格</description>
        <errorConditionFormula>ScoreID__r.Score__c  &lt; 60</errorConditionFormula>
        <errorMessage>分数没有及格</errorMessage>
    </validationRules>
</CustomObject>